<resources>
    <string name="app_name">Reactive App</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is too short</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing username
        completions."
    </string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_news_detail">News Detail</string>
    <string name="title_activity_recipe_detail">Recipe Detail</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_recipes">Recipes</string>
    <string name="title_news">News</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="recipe_image_content_description">Recipe image</string>
    <string name="recipe_title">Recipe title in two rows to check how it works</string>
    <string name="recipe_description">Recipe description for this delicious food image is showing which you should check out and make this food yourself</string>
</resources>
